--- a/garry.html
+++ b/garry.html
@@ -41,13 +41,16 @@ body{
 		<dd>lineID:garry321go</dd>
 </dl>
 </div>
-<div style="float:left;height: 500px;width:60%;">
+<div style="float:left;height: 600px;width:60%;">
 <dl>
 	<dt><h3 style="color:darkblue;">個人資訊</h3></dt>
 		<dd>生日:2003/08/11</dd>
 		<dd>性別:男</dd>
+		<dd>基隆人</dd>
 		<dd>職業:大學生</dd>
 		<dd>喜歡跟朋友聊天</dd>
+</dl>
+<img src= "yan.jpg" width="300"height="400"/>
 </div>
 </body>
 </html>
